--- a/SoftwareC/Home/myPage.html
+++ b/SoftwareC/Home/myPage.html
@@ -24,8 +24,8 @@
             </div>
             <div id="login_bar">
                 <a href="/Zoo/home/home.html"><h4>홈</h4></a>
-                <a href=""><h4>로그인</h4></a>
-                <a href=""><h4>회원가입</h4></a>
+                <a href=""><h4>주피 님</h4></a>
+                <a href=""><h4>로그아웃</h4></a>
             </div>
         </nav>
     </header>
@@ -40,7 +40,12 @@
             <i class="fa-solid fa-pen fa-flip-horizontal"></i>
         </div>
         <div id="mypage_comment">
-            <div class="mypage_review"></div>
+            <div class="mypage_review">
+                <p class="mypage_review_in"><i><b>Spider-Man: No Way Home</b></i></p>
+                <p class="mypage_review_in">2022, 누적관객수, 별점</p>
+                <hr class="mypage_review_in">
+                <p class="mypage_review_in">comment</p>
+            </div>
         </div>
 
         <div class="mypage_movie">
