--- a/SoftwareC/movie/movie.html
+++ b/SoftwareC/movie/movie.html
@@ -46,10 +46,20 @@
                     <i class="fa-solid fa-star"></i>
                     <h3>5.0</h3>
                 </div>
-            </div>
-            <div class="starpoint_wrap">
-                <!-- https://pm1122dev.tistory.com/40 -->
-                
+                <p>선택한 별점 표시</p>
+                <div class="star_rating">
+                    <!-- https://codepen.io/chris22smith/pen/MJzLJN -->
+                    <input type="radio" id="5-stars" name="rating" value="5" v-model="ratings"/>
+                    <label for="5-stars" class="star pr-4">★</label>
+                    <input type="radio" id="4-stars" name="rating" value="4" v-model="ratings"/>
+                    <label for="4-stars" class="star">★</label>
+                    <input type="radio" id="3-stars" name="rating" value="3" v-model="ratings"/>
+                    <label for="3-stars" class="star">★</label>
+                    <input type="radio" id="2-stars" name="rating" value="2" v-model="ratings"/>
+                    <label for="2-stars" class="star">★</label>
+                    <input type="radio" id="1-star" name="rating" value="1" v-model="ratings" />
+                    <label for="1-star" class="star">★</label>
+                </div>
             </div>
             <div id="movie_user_want">
                 <div id="user_want_watch">
@@ -76,7 +86,7 @@
             <h4>코멘트</h4>
             <div id="comment_button">
                 <textarea name="comment" rows="10" cols="50"></textarea>
-                <input type="button" value="확인" id="comment_btn">
+                <input type="button" value="완료">
             </div>
             <div class="movie_evaluate_user">
                 <p id="comment_user_name">user name</p>
