--- a/SoftwareC/Home/home.html
+++ b/SoftwareC/Home/home.html
@@ -40,6 +40,17 @@
         <h3>일별 박스오피스 순위</h3>
 
         <div id="section_main_div">
+            <a href="" class="new_aTag"> 
+                    <div class="new_divTag">
+                        <p class="movie_rank">1</p>
+                        <img src="" alt="" class="movie_img">
+                        <p class="movie_title">스파이더맨</p>
+                        <div class="movieNation_movieOpen">
+                            <span>2022, </span>
+                            <span>미국</span>
+                        </div>
+                    </div>
+            </a>
 
         </div>
 
