--- a/SoftwareC/movie/movie.html
+++ b/SoftwareC/movie/movie.html
@@ -47,37 +47,51 @@
                     <i class="fa-solid fa-star"></i>
                     <h3>5.0</h3>
                 </div>
-                <div id="star_rating">
-                    <!-- https://gurtn.tistory.com/80 -->
-                    <p>선택한 별점 표시</p>
-                    <span class="star">
-                        ★★★★★
-                        <span>★★★★★</span>
-                        <input type="range" oninput="drawStar(this)" value="1" step="1" min="0" max="10">
-                    </span>
+                <div class="star_rating">
+                    <div class="rating-wrap">
+                        <fieldset class="rating">
+                            <h3 id="current_value"></h3>
+                            <input type="radio" id="star10" name="rating" value="10" onclick="clickStar(this)"/><label for="star10" class="full"></label>
+                            <input type="radio" id="star9" name="rating" value="9" onclick="clickStar(this)"/><label for="star9" class="half"></label>
+                            <input type="radio" id="star8" name="rating" value="8" onclick="clickStar(this)"/><label for="star8" class="full"></label>
+                            <input type="radio" id="star7" name="rating" value="7" onclick="clickStar(this)"/><label for="star7" class="half"></label>
+                            <input type="radio" id="star6" name="rating" value="6" onclick="clickStar(this)"/><label for="star6" class="full"></label>
+                            <input type="radio" id="star5" name="rating" value="5" onclick="clickStar(this)"/><label for="star5" class="half"></label>
+                            <input type="radio" id="star4" name="rating" value="4" onclick="clickStar(this)"/><label for="star4" class="full"></label>
+                            <input type="radio" id="star3" name="rating" value="3" onclick="clickStar(this)"/><label for="star3" class="half"></label>
+                            <input type="radio" id="star2" name="rating" value="2" onclick="clickStar(this)"/><label for="star2" class="full"></label>
+                            <input type="radio" id="star1" name="rating" value="1" onclick="clickStar(this)"/><label for="star1" class="half"></label>
+                        </fieldset>
+                    </div>
                 </div>
-                <!-- <input type="button" value="별점" id="star_btn"> -->
             </div>
             <div id="movie_user_want">
                 <div id="user_want_watch">
                     <h6>보고싶어요</h6>
-                    <a href="" class="movie_user_want_a"><i class="fa-solid fa-folder-closed" onclick="service()"></i></a>
+                    <button id="wantButton" type="button" class="movie_user_want_a">
+                        <i class="fa-solid fa-folder-closed"></i>
+                        <input id="wantMovieId" type="hidden" value={{movieInfo.movieCd}} name="movieId">
+                        <input id="wantUserId" type="hidden" value={{#user}}{{userId}}{{/user}} name="userId">
+                    </button>
                 </div>
                 <div id="user_watching">
                     <h6>보는 중</h6>
-                    <a href="" class="movie_user_want_a"><i class="fa-solid fa-laptop" onclick="service()"></i></a>
-                </div>
-                <div id="user_want_location">
-                    <h6>영화 촬영지 정보</h6>
-                    <a href="" class="movie_user_want_a"><i class="fa-solid fa-camera" onclick="service()"></i></a>
+                    <button id="watchButton" class="movie_user_want_a">
+                        <i class="fa-solid fa-laptop"></i>
+                        <input id="watchMovieId" type="hidden" value={{movieInfo.movieCd}} name="movieId">
+                        <input id="watchUserId" type="hidden" value={{#user}}{{userId}}{{/user}} name="userId">
+                    </button>
                 </div>
             </div>
         </div>
+        
         <div id="movie_information">
             <h4>영화 정보</h4>
-            <p>제목</p>
+            <p>Spider-Man:No Way Home</p>
             <p>2021 | 액션 | 미국</p>
-            <div id="information_div">정보들</div>
+            <div id="information_div">
+                ‘미스테리오’의 계략으로 세상에 정체가 탄로난 스파이더맨 ‘피터 파커’는 하루 아침에 평범한 일상을 잃게 된다. 문제를 해결하기 위해 ‘닥터 스트레인지’를 찾아가 도움을 청하지만 뜻하지 않게 멀티버스가 열리면서 각기 다른 차원의 불청객들이 나타난다. ‘닥터 옥토퍼스’를 비롯해 스파이더맨에게 깊은 원한을 가진 숙적들의 강력한 공격에 ‘피터 파커’는 사상 최악의 위기를 맞게 되는데…
+            </div>
         </div>
         <div id="movie_evaluate">
             <h4>코멘트</h4>
@@ -90,6 +104,7 @@
                 <p id="comment_user"></p>
             </div>
         </div>
+        <div style="height: 300px;"></div>
     </section>
 
     <!------ footer ------>
