--- a/SoftwareC/search/search.html
+++ b/SoftwareC/search/search.html
@@ -9,11 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="search.css">
 </head>
 <body>
-    <!-- header -->
     <header>
         <nav class="navbar">
             <div id="nav_name">
@@ -22,7 +20,8 @@
             </div>
             <div id="search">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input id="movie_search" type="text" placeholder="영화 제목">
+                <input id="movie_search" type="text" placeholder="원하는 영화 제목 검색"
+               onkeyup="if(window.event.keyCode==13){clickEnter();}" />
             </div>
             <div id="login_bar">
                 <a href="/Zoo/home/home.html"><h4>홈</h4></a>
@@ -31,36 +30,41 @@
             </div>
         </nav>
     </header>
-
-    <!-- section -->
     <section id="section">
-        <h1>로그인</h1>
-        <div id="login"> <!-- id 입력하는 input 태그, password 입력하는 input 태그 묶는 div-->
-            <!-- 로그인 form -->
-            <form action="">
-                <!-- 아이디 -->
-                <div id="id"> 
-                    <label for="login_id" ><i class="fa-solid fa-user" style="font-size: 30px;"></i></label>
-                    <input id="login_id" type="text" placeholder="ID" required>
-                <!-- 패스워드 -->
-                </div>
-                <div id="password">
-                    <label for="login_pw"><i class="fa-solid fa-key" style="font-size: 30px;"></i></label>
-                    <input id="login_pw" type="password" placeholder="Password" required>
-                </div>
-                <!-- 그 외 -->
-                <div id="login_low">
-                    <div>
-                        <input id="showPasswordCheckBox" type="checkbox" onclick="showPassword(event)">
-                        <label for="showPasswordCheckBox">비밀번호 표시</label>
+        <h3>영화 검색 결과</h3>
+        <div id="search_result">
+            <a href="/movie/{{movieCd}}">
+                <div class="search_result_movie">
+                    <img src="{{poster}}" class="movie_img"></img>
+                    <p class="movie_title">{{movieNm}}</p>
+                    <div class="movie_open_nation">
+                        <span>2022, </span>
+                        <span>{{nationAlt}}</span>
                     </div>
-                    <button id="login_btn" type="submit">로그인</button>
                 </div>
-            </form>
+            </a>
+            <a href="/movie/{{movieCd}}">
+                <div class="search_result_movie">
+                    <img src="{{poster}}" class="movie_img"></img>
+                    <p class="movie_title">{{movieNm}}</p>
+                    <div class="movie_open_nation">
+                        <span>2022, </span>
+                        <span>{{nationAlt}}</span>
+                    </div>
+                </div>
+            </a>
+            <a href="/movie/{{movieCd}}">
+                <div class="search_result_movie">
+                    <img src="{{poster}}" class="movie_img"></img>
+                    <p class="movie_title">{{movieNm}}</p>
+                    <div class="movie_open_nation">
+                        <span>2022, </span>
+                        <span>{{nationAlt}}</span>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
-
-    <!-- footer -->
     <footer id="footer">
         <!-- 주토피디아, 주피 프로젝트, 깃허브 링크, 영화 평점 사이트 -->
         <div id="information">
@@ -73,3 +77,4 @@
         </div>
     </footer>
 </body>
+</html>
